[package]
name = "polar-clock"
version = "0.1.0-dev"
authors = ["Jonathan Cornaz"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "^0.17.4"
wasm-bindgen = "^0.2.69"
chrono = { version = "^0.4.19", default-features = false, features = ["clock", "wasmbind"] }
lazy_static = "^1.4"

[profile.release]
lto = true
panic = 'abort'
